fix(incompatibilities): :bug: fix java version<16 incompatibilities